--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+cocaine-porto (0.1.0) unstable; urgency=low
+
+  * Configuration changes: support listening of multi endpoints
+
+ -- Anton Tyurin <noxiouz@yandex.ru>  Thu, 25 Feb 2016 10:49:04 +0300
+
 cocaine-porto (0.0.4) unstable; urgency=low
 
   * Fix: unlink an app volume from root namespace
