--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+cocaine-porto (0.1.2) unstable; urgency=low
+
+  * Sync spooling process
+
+ -- Anton Tyurin <noxiouz@yandex.ru>  Fri, 26 Feb 2016 09:05:49 +0300
+
 cocaine-porto (0.1.1) unstable; urgency=low
 
   * HTTPClient uses DualStack dialer
