--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+cocaine-isolate-daemon (0.1.5.1) unstable; urgency=low
+
+  * Bugfix(packaging): upstart and ubic use --config option
+
+ -- Anton Tyurin <noxiouz@yandex.ru>  Tue, 26 Apr 2016 14:24:28 +0300
+
 cocaine-isolate-daemon (0.1.5) unstable; urgency=low
 
   * Bugfix(process): collect childs properly
