--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+cocaine-isolate-daemon (0.1.5.2) unstable; urgency=low
+
+  * Bugfix(cmd): do not use nil connection
+
+ -- Anton Tyurin <noxiouz@yandex.ru>  Wed, 27 Apr 2016 14:24:47 +0300
+
 cocaine-isolate-daemon (0.1.5.1) unstable; urgency=low
 
   * Bugfix(packaging): upstart and ubic use --config option
