--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+cocaine-isolate-daemon (0.1.5.3) unstable; urgency=low
+
+  * Feature(metrics): show timer metrics for process and docker
+
+ -- Anton Tyurin <noxiouz@yandex.ru>  Thu, 28 Apr 2016 13:49:43 +0300
+
 cocaine-isolate-daemon (0.1.5.2) unstable; urgency=low
 
   * Bugfix(cmd): do not use nil connection
