--- a/debian/changelog
+++ b/debian/changelog
@@ -1,7 +1,13 @@
+cocaine-isolate-daemon (0.1.5.11) unstable; urgency=low
+
+  * Feature(process): SIGKILL via Pdeathsig to workers
+
+ -- Anton Tyurin <noxiouz@yandex.ru>  Thu, 19 May 2016 12:21:36 +0300
+
 cocaine-isolate-daemon (0.1.5.10) unstable; urgency=low
 
   * Feature(logs): add session and conn ids to logs
-  * Bugfix/Update(docker): engine-api has a fix of Events 
+  * Bugfix/Update(docker): engine-api has a fix of Events
 
  -- Anton Tyurin <noxiouz@yandex.ru>  Thu, 19 May 2016 12:00:43 +0300
 
