--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+cocaine-isolate-daemon (0.1.6.4) unstable; urgency=low
+
+  * Fix(docker): Spooling "last line" fix
+
+ -- Anton Tyurin <noxiouz@yandex.ru>  Mon, 27 Jun 2016 19:17:24 +0300
+
 cocaine-isolate-daemon (0.1.6.3) unstable; urgency=low
 
   * Fix(docker): Spool can process \n and no-\n replies
