--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+cocaine-isolate-daemon (0.1.6.6) unstable; urgency=low
+
+  * Fix(process): Unpack archives with nested dir without tar headers
+
+ -- Anton Tyurin <noxiouz@yandex.ru>  Wed, 13 Jul 2016 18:33:37 +0300
+
 cocaine-isolate-daemon (0.1.6.5) unstable; urgency=low
 
   * Feat(docker): Docker Spool supports tags
