--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+cocaine-isolate-daemon (0.1.6.8) unstable; urgency=low
+
+  * Feat(process): Set process group
+
+ -- Anton Tyurin <noxiouz@yandex.ru>  Mon, 18 Jul 2016 13:06:41 +0300
+
 cocaine-isolate-daemon (0.1.6.7) unstable; urgency=low
 
   * Fix(process): Workaround for an exec.Cmd bug
