--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+cocaine-isolate-daemon (0.1.7.9) unstable; urgency=low
+
+  * feat(docker): add bind
+  * feat(porto): add bind
+
+ -- Anton Tyurin <noxiouz@yandex.ru>  Wed, 05 Oct 2016 20:59:39 +0300
+
 cocaine-isolate-daemon (0.1.7.8) unstable; urgency=low
 
   * isolate(porto): add option for set img url in porto container env property
