--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+cocaine-isolate-daemon (0.1.9.7) unstable; urgency=low
+
+  * daemon: bugfix in when more than 1 listener is handled
+  * isolate: add Inspect command
+
+ -- Dmitriy Karpukhin <dmitriy.karpukhin@gmail.com>  Tue, 14 Feb 2017 12:27:33 +0300
+
 cocaine-isolate-daemon (0.1.9.6) unstable; urgency=low
 
   * Refactoring
