--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+cocaine-isolate-daemon (0.2.0.7) unstable; urgency=low
+
+  * mtn: switch mtn state to boltdb
+
+ -- Dmitriy Karpukhin <dmitriy.karpukhin@gmail.com>  Mon, 24 Sep 2018 13:42:57 +0300
+
 cocaine-isolate-daemon (0.2.0.6) unstable; urgency=low
 
   * isolate(porto): fix try mtn alloc when spool application without mtn
