--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+cocaine-isolate-daemon (0.2.1.0) unstable; urgency=low
+
+  * mtn: fix free allocation counting
+
+ -- Dmitriy Karpukhin <dmitriy.karpukhin@gmail.com>  Wed, 10 Oct 2018 13:22:09 +0300
+
 cocaine-isolate-daemon (0.2.0.9) unstable; urgency=low
 
   * mtn: add option for try run with local mtn state
