--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+cocaine-isolate-daemon (0.2.1.2) unstable; urgency=low
+
+  * mtn: add more logging for mtn
+  * mtn: add check for prevent call UnuseAlloc() second time
+
+ -- Dmitriy Karpukhin <dmitriy.karpukhin@gmail.com>  Wed, 30 Jan 2019 17:19:54 +0300
+
 cocaine-isolate-daemon (0.2.1.1) unstable; urgency=low
 
   * isolate(porto): Check that volume have cocaine app label before vunlink at GC state.
