--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+cocaine-isolate-daemon (0.2.1.3) unstable; urgency=low
+
+  * mtn: fix possible raise when call UseAlloc()
+
+ -- Dmitriy Karpukhin <dmitriy.karpukhin@gmail.com>  Tue, 12 Feb 2019 14:42:33 +0300
+
 cocaine-isolate-daemon (0.2.1.2) unstable; urgency=low
 
   * mtn: add more logging for mtn
