--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+cocaine-isolate-daemon (0.2.1.4) unstable; urgency=low
+
+  * isolate(porto): add feature external download helper
+
+ -- Dmitriy Karpukhin <dmitriy.karpukhin@gmail.com>  Wed, 20 Feb 2019 16:38:33 +0300
+
 cocaine-isolate-daemon (0.2.1.3) unstable; urgency=low
 
   * mtn: fix possible raise when call UseAlloc()
